# freelens-rust

./: .gitignore  Cargo.toml  README.md  REWRITE_PLAN.md
crates/freelens-app/: Cargo.toml  build.rs  tauri.conf.json
crates/freelens-app/capabilities/: default.json
crates/freelens-app/src/: main.rs
crates/freelens-ipc/: Cargo.toml
crates/freelens-ipc/src/: lib.rs
crates/freelens-kube/: Cargo.toml
crates/freelens-kube/src/: lib.rs
crates/freelens-kubeconfig/: Cargo.toml
crates/freelens-kubeconfig/src/: lib.rs
docs/: PODS_CONTAINERS_COLUMN.md  RELEASE_AND_ELECTRON_REMOVAL.md  RESOURCE_STATUS_DISPLAY.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  contracts.ts  main.tsx  styles.css  transport.ts
scripts/: build-windows-release.ps1
