[workspace]
members = [
  "crates/freelens-app",
  "crates/freelens-ipc",
  "crates/freelens-kubeconfig",
  "crates/freelens-kube",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

