[package]
name = "freelens-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
freelens-ipc = { path = "../freelens-ipc" }
freelens-kubeconfig = { path = "../freelens-kubeconfig" }
kube = { version = "0.98", features = ["client", "config", "rustls-tls"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
serde.workspace = true
tauri = { version = "2", features = [] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

