[package]
name = "freelens-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
freelens-ipc = { path = "../freelens-ipc" }
freelens-kube = { path = "../freelens-kube" }
freelens-kubeconfig = { path = "../freelens-kubeconfig" }
kube = { version = "0.98", features = ["client", "config", "rustls-tls", "ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tokio = { version = "=1.48.0", features = ["sync", "rt"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
