[package]
name = "freelens-kube"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
futures = "0.3"
kube = { version = "0.98", features = ["client", "config", "rustls-tls", "ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng = "0.10"
thiserror.workspace = true
tokio = { version = "=1.48.0", features = ["sync", "rt", "io-util", "time"] }
tracing.workspace = true
